namespace EndPointCommerce.Domain.Entities;

public class Image : BaseEntity
{
    public required string FileName { get; set; }
}