namespace EndPointEcommerce.WebStore.Api;

public record State(int Id, string Name, string Abbreviation);
